--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -8,7 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: Checkout
-       uses: actions/checkout@v1    
+       uses: actions/checkout@v1 
+     - name: hashicorp/setup-terraform@v2
+       with: 
+         terraform_version: 1.1.9
+     - name: Terraform init
+       run: terraform init   
      - name: Multi line string
        run: |
          pwd
