--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -9,7 +9,8 @@ jobs:
     steps:
      - name: Checkout
        uses: actions/checkout@v1 
-     - name: hashicorp/setup-terraform@v2
+     - name: Set Terraform
+       uses: hashicorp/setup-terraform@v2
        with: 
          terraform_version: 1.1.9
      - name: Terraform init
