--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -3,6 +3,10 @@ name: shell commands
 on: 
   - push
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+
 jobs: 
   terraform:
     runs-on: ubuntu-latest
