--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -21,5 +21,7 @@ jobs:
        run: |
           terraform init 
           terraform validate
-          terraform apply
+          terraform plan
+          terraform apply -auto-approve
+          terraform destroy
      
