--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -23,5 +23,5 @@ jobs:
           terraform validate
           terraform plan
           terraform apply -auto-approve
-          terraform destroy
+          terraform destroy -auto-approve
      
