--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -26,8 +26,7 @@ jobs:
      - name: release
        run: npx semantic-release
        env:
-         GITHUB_TOKEN: ${{secrets.TOKEN}}
-
+         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
      #- name: Terraform apply 
        #run: terraform apply -auto-approve
      #- name: Terraform destroy 
