--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -8,7 +8,11 @@ env:
   AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
 
 jobs: 
-  terraform:
+  terraform-workflow:
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
      - name: Checkout
