--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -13,10 +13,11 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
+      packages: write
     runs-on: ubuntu-latest
     steps:
      - name: Checkout
-       uses: actions/checkout@v3 
+       uses: actions/checkout@v1
      - name: Set Terraform
        uses: hashicorp/setup-terraform@v2
        with: 
