--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -13,7 +13,6 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
-      packages: write
     runs-on: ubuntu-latest
     steps:
      - name: Checkout
@@ -31,7 +30,7 @@ jobs:
      - name: release
        run: npx semantic-release
        env:
-         TOKEN: ${{ secrets.TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
      #- name: Terraform apply 
        #run: terraform apply -auto-approve
      #- name: Terraform destroy 
