--- a/.github/workflows/first.yaml
+++ b/.github/workflows/first.yaml
@@ -25,8 +25,8 @@ jobs:
        run: terraform init
      - name: Terraform validate
        run: terraform validate
-     - name: Terraform plan
-       run: terraform plan
+     #- name: Terraform plan
+      # run: terraform plan
      - name: releases
        run: npx semantic-release
        env:
